syntax = "proto3";

package guild;

// 指定生成的 Go 代码的包名
option go_package = "proto/guild";

// 用户信息
message Guild {
  uint64 id = 1;
  string name = 2;
  
  // 时间戳
  int64 created_at = 7;
  bool is_active = 8;
}

// 请求消息
message GetGuildInfoRequest {
  uint64 guild_id = 1;
}

// 响应消息
message GetGuildInfoResponse {
  Guild guild = 1;
  int32 ret = 2;
}

// 流式 RPC 请求：获取公会成员列表
message GetGuildMembersStreamRequest {
  uint64 guild_id = 1;
}

// 流式 RPC 响应：公会成员信息（每个消息包含一批成员）
message GetGuildMembersStreamResponse {
  repeated Guild members = 1;  // 一批成员信息
  int32 ret = 2;  // 返回码（最后一个消息时使用）
}

